# BasicTemplateC-

./: CMakeLists.txt  LICENSE  README.md
include/student/: student.hpp
include/teacher/: teacher.hpp
src/: CMakeLists.txt  main.cpp
src/student/: CMakeLists.txt  student.cpp
src/teacher/: CMakeLists.txt  teacher.cpp
test/: CMakeLists.txt
test/studentTest/: CMakeLists.txt  test_student.cpp
test/teacherTest/: CMakeLists.txt  test_teacher.cpp
